<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tInputMoney"
        android:inputType="number" />

    <EditText
        android:id="@+id/inputInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tInputInfo" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnOk"
        android:text="@string/buttonOk" />

    <CheckBox
        android:id="@+id/bankCardChkBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tBankCardChkBx" />

    <CheckBox
        android:id="@+id/mobilePhoneChkBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tMobilePhoneChkBx" />

    <CheckBox
        android:id="@+id/cashAddressChkBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tCashAddressChkBx" />
</LinearLayout>





<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".MainActivity">-->

    <!--<LinearLayout-->
        <!--android:id="@+id/linearLayout"-->
        <!--android:layout_width="331dp"-->
        <!--android:layout_height="553dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:orientation="vertical"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintVertical_bias="0.734">-->

        <!--<TextView-->
            <!--android:id="@+id/textView"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="58dp"-->
            <!--android:text="@string/textUp"-->
            <!--android:textSize="24sp" />-->

        <!--<CheckBox-->
            <!--android:id="@+id/bankCardChkBx"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/tBankCardChkBx" />-->

        <!--<CheckBox-->
            <!--android:id="@+id/mobilePhoneChkBx"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/tMobilePhoneChkBx" />-->

        <!--<CheckBox-->
            <!--android:id="@+id/cashAddressChkBx"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/tCashAddressChkBx" />-->

        <!--<EditText-->
            <!--android:id="@+id/inputMoney"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="89dp"-->
            <!--android:ems="10"-->
            <!--android:inputType="phone"-->
            <!--android:hint="@string/tInputMoney" />-->


        <!--<EditText-->
            <!--android:id="@+id/inputInfo"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="80dp"-->
            <!--android:ems="10"-->
            <!--android:inputType="textPersonName"-->
            <!--android:hint="@string/tInputInfo" />-->

        <!--<Button-->
            <!--android:id="@+id/btnOK"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:onClick="btnOk"-->
            <!--android:text="@string/buttonOk" />-->

    <!--</LinearLayout>-->
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->